# Texturia

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Cargo.toml  LICENSE  README.md  build.sh  index.html  package-lock.json  package.json  postcss.config.cjs  run.sh  tailwind.config.cjs  tsconfig.json  vite.config.ts
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: App.vue  Config.hpp  CoreApp.cpp  CoreApp.hpp  Defines.hpp  Layer.cpp  Layer.h  Layer.hpp  LayerStack.cpp  LayerStack.h  LayerStack.hpp  Log.cpp  Log.hpp  LookupNodes.hpp  Main.cpp  Nodes.cpp  Nodes.hpp  Texturia.cpp  Window.cpp  Window.hpp  editor.rs  main.rs  main.ts  numeric_input.rs  tour.rs  txpch.hpp
src-tauri/: tauri.conf.json
src/Events/: AppEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
src/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.hpp
src/Input/: Input.hpp  KeyCodes.hpp  MouseButtonCodes.hpp
src/Renderer/: GraphicsContext.hpp
src/assets/styles/: base.css
src/components/: Editor.vue  Layout.vue
src/utils/: mod.rs
