[package]
name = "texturia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", features = [
  "image",
  "debug",
] }
env_logger = "0.9"
unicode-segmentation = "1.9.0"
