[package]
name = "texturia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.4.2", features = ["image", "debug", "pure"] }
iced_pure = "0.2.2"
iced_native = "0.5.1"
iced_lazy = { version = "0.1.0", features = ["pure"] }
env_logger = "^0.9"
